panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__include__test_include_system_header.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/include/test_include_system_header.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_system_header.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` (not-equal (bit-xor 1 0) (bit-and 0 1)))
         (expression (bit-or-assign (name x~2 `int`) 0b1'1000))
         (expression (bit-and-assign (name x~2 `int`) 0xf))
         (return (equal (name x~2 `int`) 0b1001)))))

----- stderr -----
