panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__include__test_stddef_include_guard.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/include/test_stddef_include_guard.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (definition NULL~0 `int` 42)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (name NULL~0 `int`)))))

----- stderr -----
